--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,6 +1,7 @@
 <div id="footer-container">
     <span class="footer-legend">Distribuidor mayorista y minorista de artículos de cultivo</span>
-    <div id="footer-image"><img src="http://localhost:80/bayres-web/src/app/images/logo-distribuidor.png" alt=""></div>
+    <div id="footer-image"><img src="http://bayresnoproblem.com.ar/images/nueva/logo-distribuidor.png" alt="Bayres No Problem"
+                                style="width: 100%; max-width: 400px; min-width: 310px; margin-top: 20px; margin-bottom: 20px;"></div>
     <div id="footer-links">
         <div class="footer-links-group">
             <span class="footer-links-title">CONSULTAS</span>
