--- a/src/app/shared/nav/nav.component.html
+++ b/src/app/shared/nav/nav.component.html
@@ -23,7 +23,7 @@
                         </div>
                         <div (click)="visibility = false">
                             <i class="fa fa-heart" aria-hidden="true"></i>
-                            <span (click)="goTo('misDeseos')">Lista de Deseos</span>
+                            <span (click)="goTo('deseos')">Lista de Deseos</span>
                         </div>
                         <div (click)="visibility = false">
                             <i class="fa fa-power-off" aria-hidden="true"></i>
