--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -4,7 +4,7 @@
     <div style="margin-top: 100px; background-color: white; flex-direction: column; display: flex; justify-content: center; align-items: center;">
     <span class="principal-disclaimer">Venta online solo para mayores de 18 años <a
             href="http://www.google.com">(Salir)</a></span>
-        <img src="http://localhost:80/bayres-web/src/app/images/logo-distribuidor.png" alt=""
+        <img src="http://bayresnoproblem.com.ar/images/nueva/logo-distribuidor.png" alt=""
              style="width: 100%; max-width: 400px; min-width: 310px; margin-top: 20px; margin-bottom: 20px;">
     </div>
 
@@ -15,9 +15,11 @@
         <carrousel-component [data]="en_oferta"></carrousel-component>
         <h1 class="principal-section-title">DESTACADOS</h1>
         <carrousel-component [data]="destacado"></carrousel-component>
-        <h1 class="principal-section-title" *ngIf="loged">MIS DESEOS</h1>
-        <carrousel-component [data]="deseado" *ngIf="loged"></carrousel-component>
+        <h1 class="principal-section-title" *ngIf="loged && deseado.length > 0">MIS DESEOS</h1>
+        <carrousel-component [data]="deseado" *ngIf="loged && deseado.length > 0"></carrousel-component>
     </div>
 </div>
+
+
 
 
