--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -25,11 +25,12 @@
   #footer-links {
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
+    align-items: center;
     margin-bottom: 20px;
     @include breakpoint('medium') {
       flex-direction: row;
+      align-items: flex-start;
     }
 
     .footer-links-group {
