--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
-@import 'node_modules/angular2-toaster/toaster';
+@import '../node_modules/angular2-toaster/toaster';
+
 
 body, *{
     font-family: "PT Sans", serif;
